--- a/tdlgradle/src/main/res/values/strings.xml
+++ b/tdlgradle/src/main/res/values/strings.xml
@@ -5,5 +5,7 @@
     <string name="action_settings">Settings</string>
     <string name="taskview">Task View</string>
     <string name="calendarview">Calender View</string>
+    <string name="title_activity_edit">EditActivity</string>
+    <string name="hello_world">Hello world!</string>
 
 </resources>
